--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ main {
     max-width: 1110px;
     margin: 0 auto;
     margin-top: 80px;
-    margin-bottom: 100px;
+    padding-bottom: 100px;
 }
 .specialOffers_title {
     font-family: Roboto;
@@ -135,14 +135,16 @@ main {
     width: 100%;
     max-width: 255px;
     background-color: #FFFFFF;
-    padding: 25px 65px 175px 65px;
-    
-    
+    padding: 22px 30px 30px 30px;
+    display: flex;     
+    flex-direction: column;     
+    align-items: center;
 }
 .specialOffers_conteiner--box--photo {
     width: 100%;
     max-width: 125px;
     margin: 0 auto;
+    margin-bottom: 20px;
 }
 .specialOffers_conteiner--box--text {
     font-family: Roboto;
@@ -152,6 +154,7 @@ main {
     letter-spacing: 0%;
     text-align: center;
     color: #333333;
+    margin-bottom: 20px;
 }
 .specialOffers_conteiner--box--price {
     font-family: Roboto;
@@ -161,6 +164,7 @@ main {
     letter-spacing: 5%;
     text-align: center;
     color: #000000;
+    margin-bottom: 20px;
 }
 .specialOffers_conteiner--box--button {
     font-family: Roboto;
@@ -262,5 +266,50 @@ main {
     padding-left: 40px;
     padding-bottom: 35px;
 }
-
+.impuls {
+    width: 100%;
+    max-width: 1110px;
+    margin: 0 auto;
+    margin-top: 100px;
+    margin-bottom: 80px;
+}
+.impuls_table--tr--td {
+    padding: 35px 65px;
+    border: 0.5px solid #EFEFEF;
+    background-color: #FFFFFF;
+}
+.popular {
+    width: 100%;
+    max-width: 1110px;
+    margin: 0 auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+.popular_box--top {
+    width: 100%;
+    max-width: 255px;
+    border-bottom: 1px solid #EFEFEF;
+}
+.popular_box--top--title {
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 141%;
+    letter-spacing: 0%;
+    color: #000000;
+    padding-bottom: 30px;
+    width: 87px;
+}
+.popular_box--list {
+    list-style: none;
+}
+.popular_box--list--li {
+    font-family: Roboto;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 28px;
+    letter-spacing: 0%;
+    color: #828282;
+    text-decoration: none;
+}
 
